@@ -12,6 +12,7 @@ Problem:
       Scales: 1
       
   Starting point: [4](1,5,5,1)
+  Starting value: [1](12)
   Infinity value (for all functions): inf
 CFSQP specific variables: 
   Nineq: 1
