@@ -1,3 +1,14 @@
+2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Update to new interface.
+	* src/roboptim-core-cfsqp-plugin.cc,
+	* tests/hs071.hh,
+	* tests/optimization-problem-1.cc:
+	Update to new interface and fix a bug in hs071
+	problem definition.
+	* tests/plugin.stdout,
+	* tests/simple.stdout: Regenerate.
+
 2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Remove pkg.m4.
